fix sending shift

--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -1,4 +1,4 @@
-$content-color: #F0F0F0
+$content-color: #FFFFFF
 
 body, html
     margin: 0
@@ -36,4 +36,4 @@ body, html
     word-wrap: break-word
 
 .cursor
-    background-color: #555
+    background-color: #AAA
